Fixed Horizontal Scrollbar

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 body {
     min-height: 100vh;
     width: 100%;
@@ -26,7 +28,7 @@ img {
     color: #f9faf8;
     font-size: 24px;
     margin-left: 16px;
-    padding: 16px;
+    padding-left: 20px;
 }
 
 .head-links {
@@ -49,6 +51,7 @@ img {
     color: #e5e7eb;
     font-size: 18px;
     padding: 69px;
+    max-width: 100%;
     
 }
 
@@ -58,6 +61,7 @@ img {
 }
 
 .hero-welcome {
+    display: flex;
     font-size: 48px;
     color: #f9faf8;
     font-weight: 900;
@@ -77,7 +81,6 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin: 30px;
     width: 100%;
 }
 
@@ -99,6 +102,7 @@ img {
     text-align: center;
     border: 1px solid #3882f6;
     border-radius: 2px;
+    margin-bottom: 30px;
 }
 
 .quote-container {
@@ -119,8 +123,10 @@ img {
 }
 
 .bee {
-    display: flex;width: 100%;
-
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    margin-right: 800px;
 }
 
 .action-container {
@@ -179,7 +185,6 @@ margin-bottom: 0px;
     color: #f9faf8;
     padding: 8px;
     margin-top: 8px;
-    border-radius: 5px solid white;
 }
 
 a:link, a:visited {
